# totetaxi

./: CHANGELOG.md  CLAUDE.md  CLIENT_UPDATE_JAN9.md  FEATURE_PROPOSAL.md  INCIDENTS.md  README.md  SECURITY_AUDIT_FEB2026.md  UPDATES.md  export.txt  export_code.py  invoice.html  package-lock.json  project_structure.txt
backend/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.prod  README.md  conftest.py  cookies.txt  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  fly.toml  friday_logs.txt  gunicorn.conf.py  pyproject.toml  pytest.ini  recreate_services.py  requirements.txt  staff_cookies.txt
backend/apps/accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/assistant/: admin.py  graph.py  prompts.py  tools.py  urls.py  views.py
backend/apps/bookings/: admin.py  apps.py  models.py  pricing_utils.py  recovery.py  serializers.py  signals.py  tasks.py  urls.py  views.py  zip_codes.py
backend/apps/customers/: admin.py  apps.py  authentication.py  booking_serializers.py  booking_views.py  emails.py  models.py  serializers.py  urls.py  views.py
backend/apps/logistics/: apps.py  conftest.py  models.py  services.py  urls.py  views.py
backend/apps/payments/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/services/: admin.py  views.py  (+2 more)
backend/config/: celery.py  middleware.py  settings.py  urls.py  wsgi.py
backend/customers/: urls.py
backend/scripts/: back_export.py  back_export.txt  check_booking.py  entrypoint.sh  validate_ses_setup.py
(+234 files in other folders)
